<resources>
    <string name="app_name">Fuel Consumption 2</string>
    <string name="buttonAddVehicle">Add vehicle</string>
    <string name="buttonFilterHistory">Filter history</string>
    <string name="buttonAddFuelConsumption">Add fuel consumption</string>
    <string name="textAverageConsumptionDescription">Average consumption:</string>
    <string name="textAverageConsumption">12.09 L/100km</string>
    <string name="textAverageCostDescription">Average cost:</string>
    <string name="textAverageCost">30.25 zł/100km</string>
    <string name="addTankingAmount_hint">Amount in L</string>
    <string name="addTankingKilometersBefore_hint">Kilometers before</string>
    <string name="addTankingKilometersAfter_hint">Kilometers after</string>
    <string name="addTankingPrice_hint">Fuel price per L</string>
    <string name="addTankingSubmit_text">OK</string>
    <string name="headingDate">Date</string>
    <string name="headingTime">Time</string>
    <string name="headingFuelType">Fuel</string>
    <string name="headingFuelAmount">Amount (L)</string>
    <string name="headingPrice">Price (zł/L)</string>
    <string name="headingCost">Cost (zł)</string>
    <string name="headingKilometersDifference">Distance</string>
    <string name="addVehicleName_hint">Name</string>
    <string name="addVehicleRegistryNumber_hint">Registry number</string>
    <string name="addVehicleKilometers_hint">Current kilometers</string>
    <string name="addVehicleSubmit_text">Add</string>
    <string name="filterHistoryOptional">* optional</string>
    <string name="filterHistoryStartDate_hint">Select start date</string>
    <string name="filterHistoryEndDate_hint">Select end date</string>
    <string name="filterHistoryFuelTypeLabel">* must select at least 1</string>
</resources>